updated content, fixed wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@
 	.my-column-container {
 		display: flex;
 		flex-direction: row;
+		flex-wrap: wrap;
 		justify-content: space-around;
 		align-items: center;
 		padding-left: 60px;
@@ -91,7 +92,7 @@
 	}
 
 	.my-blurb {
-		text-align: left;
+		text-align: justify;
 	}
 
 	.my-proj-blurb-cont {
